# Multi-robot-mapping

./: .gitignore  README.md
BaseStation/: setup.bash
BaseStation/build_isolated/: catkin_make_isolated.cache
BaseStation/build_isolated/icp_merge/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
BaseStation/build_isolated/map_merge/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
BaseStation/build_isolated/pose_merge/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
BaseStation/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
BaseStation/devel_isolated/dynamic_edt_3d/: setup.bash  setup.sh  setup.zsh
BaseStation/devel_isolated/icp_merge/: .catkin
BaseStation/devel_isolated/map_merge/: .catkin
BaseStation/devel_isolated/octomap/: setup.bash  setup.sh  setup.zsh
BaseStation/devel_isolated/octovis/: setup.bash  setup.sh  setup.zsh
BaseStation/devel_isolated/pose_merge/: .catkin  _setup_util.py  local_setup.sh
BaseStation/src/map_merge/: CMakeLists.txt
BaseStation/src/map_merge/src/icp_merge/: CMakeLists.txt
BaseStation/src/map_merge/src/icp_merge/src/: icp_test.cpp  octomap_icp_merge.cpp  publish_freiburg_dataset.cpp  publish_freiburg_dataset_duplicate.cpp  ros_msg_to_pcl.cpp
BaseStation/src/map_merge/src/pose_merge/: CMakeLists.txt
BaseStation/src/map_merge/src/pose_merge/launch/: frames.launch
BaseStation/src/map_merge/src/pose_merge/src/cpp/: color_octomap_saver.cpp  multirobot_binary_merge.cpp  multirobot_color_merge.cpp  multirobot_live_color_merge.cpp  octomap_msg_reader.cpp  publish_binary_map_file.cpp  publish_octomap.cpp  transform_live_octomap.cpp
Robot/: setup.bash
Robot/build_isolated/: catkin_make_isolated.cache
Robot/build_isolated/amcl/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/assisted_teleop/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/base_local_planner/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
Robot/build_isolated/carrot_planner/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/clear_costmap_recovery/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/costmap_2d/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
Robot/build_isolated/default_cfg_fkie/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/dwa_local_planner/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/explore_lite/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/fake_localization/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/freenect_camera/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/freenect_launch/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/freenect_stack/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/global_planner/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/goal_passer/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/kobuki/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
Robot/build_isolated/kobuki_auto_docking/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  (+1 more)
Robot/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
SimulationWorld/build_isolated/: catkin_make_isolated.cache
SimulationWorld/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
(+2018 files in other folders)
